# mcp-ollama-orchestrator

./: .env.example  .gitignore  README.md  mcp_servers.json  pyproject.toml
src/mcp_orchestrator/: __init__.py  agent_orchestrator.py  config.py  exceptions.py  main.py  mcp_client.py  ollama_client.py  schemas.py
